ok so the login works now

--- a/client/signup.html
+++ b/client/signup.html
@@ -20,7 +20,7 @@
 	{{#if loggingIn}}
 		<li><a>Logging in...</a></li>
 	{{else}}
-		<li>the current user {{currentUser.profile.name}} has logged in</li>
+		<li>the current user {{currentUser.username}} has logged in</li>
 		<li><a id="logout">Logout</a></li>
 	{{/if}}
 </template>
