--- a/client/signup.html
+++ b/client/signup.html
@@ -1,10 +1,12 @@
 <head>
-  <title>Simple Signup Experimentation</title>
+	<meta charset="utf-8">
+	<title>Simple Signup Experimentation</title>
 </head>
 <!-- Very simple HTML at the moment -->
 <body>
 	<div id="wrap">
 		<div class="container">
+			<div id="spacer"></div>
 			<div class="row">
 				<div class="span4 offset4">
 					{{> header}}
@@ -21,7 +23,15 @@
 </body>
 
 <template name="header">
-	<h2 class="text-center">Sign In</h2>
+	{{#if currentUser}}
+		<h1 class="text-center">Your Profile</h1>
+	{{else}}
+		{{#if signup}}
+			<h1 class="text-center">Sign Up</h1>
+		{{else}}
+			<h1 class="text-center">Sign In</h1>
+		{{/if}}
+	{{/if}}
 	<hr>
 	{{#if currentUser}}
 		{{> user_loggedin}}
@@ -32,10 +42,18 @@
 
 <!-- the Handlebars 'partial' that gets looped to show the user data -->
 <template name="profileData">
-	<p><strong>{{username}}</strong> has logged in</p>
-	<p>My fav color is <strong>{{profile.favcolor}}</strong></p>
-	<p>I am in <strong>{{profile.location}}</strong></p>
-	<p>A little info about me: <strong>{{profile.bio}}</strong></p>
+	<h2>{{username}}</h2>
+	{{#if editMode}}
+		<div class="controls">
+			<input class="span4" id="favcolor" type="text" value="{{profile.favcolor}}">
+			<input class="span4" id="location" type="text" value="{{profile.location}}">
+			<input class="span4" id="bio" type="text" value="{{profile.bio}}">
+		</div>
+	{{else}}
+		<p><i class="icon-star"></i> My fav color is {{profile.favcolor}}</dd>
+		<p><i class="icon-map-marker"></i> {{profile.location}}</p>
+		<p><i class="icon-info-sign"></i> {{profile.bio}}</p>
+	{{/if}}
 </template>
 
 <template name="user_loggedin">
@@ -49,31 +67,34 @@
 		{{#each curuser}}
 			{{> profileData}}
 		{{/each}}
-		</br>
-		<div class="controls">
-			<input id="bio" type="text" placeholder="Bio">
-		</div>
-		<button id="update" class="btn" type="submit">Update</button>
+
+		{{#if editMode}}
+			<button id="saveEdit" class="btn btn-success" type="submit">Save</button>
+		{{else}}
+			<button id="editProfile" class="btn btn-custom" type="submit"><i class="icon-pencil icon-white"></i> Edit Your Profile</button>
+		{{/if}}
+		
 		<hr>
 		<button id="logout" class="btn" type="submit">Log Out</button>
 	{{/if}}
 </template>
 
 <template name="user_loggedout">
-	<p>Login with your account</p>
-	<input class="span4" id="username" type="text" placeholder="username">
-	<input class="span4" id="password" type="password" placeholder="password">
-	</br>
-	<button id="login" class="btn btn-success" type="submit">Sign In</button>
-	</br>
-	<hr>
-	<p>New user? <a id="signup">Sign up now!</a></p>
 		{{#if signup}}
-			<input id="usernameup" type="text" placeholder="Choose a username">
-			<input id="passwordup" type="text" placeholder="Choose a password">
-			<input id="favcolor" type="text" placeholder="What is you Fav color?">
-			<input id="location" type="text" placeholder="Where are you?">
+			<input class="span4" id="usernameup" type="text" placeholder="Choose a username">
+			<input class="span4" id="passwordup" type="text" placeholder="Choose a password">
+			<p>Share someting about yourself</p>
+			<input class="span4" id="favcolor" type="text" placeholder="What is you Fav color?">
+			<input class="span4" id="location" type="text" placeholder="Where are you?">
 			</br>
-			<button id="createUser" class="btn" type="submit">Create User</button>
+			<button id="createUser" class="btn btn-success" type="submit">Create User</button>
+		{{else}}
+			<p>Login with your account</p>
+			<input class="span4" id="username" type="text" placeholder="username">
+			<input class="span4" id="password" type="password" placeholder="password">
+			</br>
+			<button id="login" class="btn btn-success" type="submit">Sign In</button>
+			<hr>
+			<p>New user? <a id="signup">Sign up now!</a></p>
 		{{/if}}
 </template>
