--- a/client/signup.html
+++ b/client/signup.html
@@ -1,5 +1,6 @@
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Simple Signup Experimentation</title>
 </head>
 <!-- Very simple HTML at the moment -->
