USE parsleyjs jqBoootstrapValidate is crap

--- a/client/signup.html
+++ b/client/signup.html
@@ -96,31 +96,55 @@
 </template>
 
 <template name="user_loggedout">
-		{{#if signup}}
-			<div class="control-group">
-				<div class="controls">	
-					<input class="span4" id="usernameup" type="text" pattern="\w{3,9}" data-validation-pattern-message="Must be alphanumerical at least 3 characters and no longer then 9" placeholder="Choose a username">
-					<p class="help-block">At least 3 characters and less then 9</p>
+{{#if signup}}
+			<form>
+				<div class="control-group">
+					<div class="controls">	
+						<input class="span4" id="usernameup" type="text" pattern="\w{3,9}" data-validation-pattern-message="Must be alphanumerical at least 3 characters and no longer then 9" placeholder="Choose a username" required>
+						<p class="help-block">At least 3 characters and less then 9</p>
+					</div>
 				</div>
-			</div>
-			<div class="control-group">
-				<div class="controls">
-					<input class="span4" id="emailup" type="email" placeholder="Your email" required>
-					<p class="help-block">You will sent an email to confirm your address</p>
+				<div class="control-group">
+					<div class="controls">
+						<input class="span4" id="emailup" type="email" placeholder="Your email" required>
+						<p class="help-block">You will sent an email to confirm your address</p>
+					</div>
 				</div>
-			</div>
-			<div class="control-group">
-				<div class="controls">
-					<input class="span4" id="passwordup" type="password" pattern="\w{4,9}" data-validation-pattern-message="Must be alphanumerical at least 4 characters and no longer then 9" placeholder="Create a password">
-					<p class="help-block">Choose your password</p>
+				<div class="row">
+					<div class="span2">
+						<div class="control-group">
+							<div class="controls">
+								<input class="span2" id="passwordup" type="password" name="passwordVali" pattern="\w{4,9}" data-validation-pattern-message="Must be alphanumerical at least 4 characters and no longer then 9" placeholder="Choose a password" required>
+								<p class="help-block">Choose Password</p>
+							</div>
+						</div>
+					</div>
+					<div class="span2">
+						<div class="control-group">
+							<div class="controls">
+								<input class="span2" id="passwordup" type="password" name="passwordCheck" data-validation-matches-match="passwordVali" data-validation-matches-message="The passwords must be the same"  pattern="\w{4,9}" data-validation-pattern-message="Must be alphanumerical at least 4 characters and no longer then 9" placeholder="Repeat your password" required>
+								<p class="help-block">Repeat Password</p>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-			<hr>
-			<p><strong>Share someting about yourself</strong></p>
-			<input class="span4" id="favcolor" type="text" placeholder="What is you Fav color?">
-			<input class="span4" id="location" type="text" placeholder="Where are you?">
-			</br>
-			<button id="createUser" class="btn btn-success" type="submit">Create Your Account</button>
+			
+				<hr>
+				<p class="text-center"><strong>Share someting about yourself</strong></p>
+				<div class="control-group">
+					<div class="controls">
+						<input class="span4" id="favcolor" type="text" pattern="[\w\.,;:&-\*\s\t\r\n/\+\|\?\'\#\)\(]{1,20}" data-validation-pattern-message="Must be less than 20 characters" placeholder="What is you Fav color?" required>
+						<p class="help-block"></p>
+					</div>
+				</div>
+				<div class="control-group">
+					<div class="controls">
+						<input class="span4" id="location" type="text" pattern="[\w\.,;:&-\*\s\t\r\n/\+\|\?\'\#\)\(]{1,100}" data-validation-pattern-message="Must be less than 100 characters" placeholder="Where are you?" required>
+						<p class="help-block"></p>
+					</div>
+				</div>
+				<button id="createUser" class="btn btn-success">Create Your Account</button>
+			</form>
 		{{else}}
 			<p>Login with your account </p>
 			<input class="span4" id="username" type="text" placeholder="username">
