--- a/client/signup.html
+++ b/client/signup.html
@@ -6,6 +6,7 @@
 </head>
 <!-- Very simple HTML at the moment -->
 <body>
+	<!-- This Bootstrap modal is hidden by default -->
 	<div id="loginAlert" class="modal hide">
 		<div class="modal-header">
 			<h3>Logging In!</h3>
@@ -14,6 +15,7 @@
 			<p>Waiting for reply from the server...</p>
 		</div>
 	</div>
+	<!-- END Bootstrap modal -->
 	{{> main}}
 </body>
 
@@ -98,10 +100,10 @@
 
 <template name="user_loggedout">
 	{{#if signup}}
-		<form id="signupForm">
+		<form id="signupForm" name="signupForm">
 			<div class="control-group">
 				<div class="controls">	
-					<input class="span4" id="username" name="username" type="text" placeholder="Choose a username">
+					<input class="span4" id="usernameSignup" name="usernameSignup" type="text" placeholder="Choose a username">
 					<div class="alert alert-info">Must be alphanumerical at least 3 characters and no longer then 9</div>
 				</div>
 			</div>
@@ -113,8 +115,8 @@
 			</div>
 			<div class="control-group">
 				<div class="controls">
-					<input id="password" name="password" class="span2" type="text" placeholder="Password">
-					<input id="password_again" name="password_again" class="span2" type="text" placeholder="Retype your password">
+					<input id="passwordSignup" name="passwordSignup" class="span2" type="password" placeholder="Password">
+					<input id="password_againSignup" name="password_againSignup" class="span2" type="password" placeholder="Retype your password">
 					<div class="alert alert-info">Make sure you type your password correctly</div>
 				</div>
 			</div>
@@ -135,14 +137,23 @@
 					<input name="location" class="span4" id="location" type="text" placeholder="Where are you?">
 				</div>
 			</div>
-				<input class="btn btn-success" type="submit" id="createUser" value="Create Your Account">
+			<button class="btn btn-success" type="submit" id="createUser" data-loading-text="Creating user...">Create Your Account</button>
 		</form>
 	{{else}}
 		<p>Login with your account </p>
-		<input class="span4" id="username" type="text" placeholder="username">
-		<input class="span4" id="password" type="password" placeholder="password">
-		</br>
-		<button id="login" class="btn btn-success" type="submit">Sign In</button>
+		<form id="loginForm" name="loginForm">
+			<div class="control-group">
+				<div class="controls">
+					<input class="span4" id="usernameLogin" name="usernameLogin" type="text" placeholder="username">
+				</div>
+			</div>
+			<div class="control-group">
+				<div class="controls">
+					<input class="span4" id="passwordLogin" name="passwordLogin" type="password" placeholder="password">
+				</div>
+			</div>
+			<button id="login" class="btn btn-success" type="submit" data-loading-text="Signing in...">Sign In</button>
+		</form>
 		<hr>
 		<p>New user? <a id="signup">Sign up now!</a></p>
 	{{/if}}
